--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  font-family: 'Inter', sans-serif;
 }
 
 .App-logo {
@@ -18,13 +19,33 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(30px + 2vmin);
   color: white;
+  padding: 15px;
+  font-weight: bold;
 }
 
 .App-list {
   display: flex;
   justify-content: center;
+}
+
+.Form {
+  display: flex;
+  flex-direction: column;
+  margin: 20px;
+  padding: 10px;
+}
+
+.Errors {
+  padding: 10px;
+  font-weight: bold;
+  color: red;
+}
+
+.Confirmation {
+  margin: 50px;
+  font-size: 50px;
 }
 
 .Checkout {
@@ -42,13 +63,4 @@
 
 .App-link {
   color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
